src/wayland/touch_interface.cpp
@@ -54,11 +54,6 @@ SurfaceInterface *TouchInterface::focusedSurface() const
     return d->focusedSurface;
 }
 
-void TouchInterface::setFocusedSurface(SurfaceInterface *surface)
-{
-    d->focusedSurface = surface;
-}
-
 void TouchInterface::sendCancel()
 {
     if (!d->focusedSurface) {
@@ -107,11 +102,13 @@ void TouchInterface::sendUp(qint32 id, quint32 serial)
     }
 }
 
-void TouchInterface::sendDown(qint32 id, quint32 serial, const QPointF &localPos)
+void TouchInterface::sendDown(qint32 id, quint32 serial, const QPointF &localPos, SurfaceInterface *surface)
 {
-    if (!d->focusedSurface) {
+    if (!surface) {
         return;
     }
+
+    d->focusedSurface = surface;
 
     const auto touchResources = d->touchesForClient(d->focusedSurface->client());
     for (TouchInterfacePrivate::Resource *resource : touchResources) {
